// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`세 크기 스냅샷 — 아무도 안 부르는 분기의 유일한 안전망 1x1 1`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "columnGap": 4,
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
        "padding": 8,
        "rowGap": 4,
      }
    }
    testID="widget-unpriced-drops"
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={1.235}
      style={
        {
          "color": "#241208",
          "fontSize": 18,
          "fontVariant": [
            "tabular-nums",
          ],
          "fontWeight": "800",
        }
      }
    >
      5
    </Text>
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={1.235}
      numberOfLines={1}
      style={
        {
          "color": "#645C42",
          "fontSize": 9.5,
        }
      }
    >
      가격 미입력
    </Text>
  </View>
</View>
`;

exports[`세 크기 스냅샷 — 아무도 안 부르는 분기의 유일한 안전망 2x1 1`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "columnGap": 10,
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "padding": 12,
        "rowGap": 10,
      }
    }
    testID="widget-unpriced-drops"
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#E4E1CE",
          "borderColor": "#CFC9AE",
          "borderRadius": 9999,
          "borderWidth": 1,
          "flexShrink": 0,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        }
      }
      testID="unpriced-badge"
    >
      <Text
        adjustsFontSizeToFit={true}
        allowFontScaling={false}
        maxFontSizeMultiplier={1.235}
        numberOfLines={1}
        style={
          {
            "color": "#241208",
            "fontSize": 16,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "800",
          }
        }
      >
        5
      </Text>
    </View>
    <View
      style={
        {
          "columnGap": 2,
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "rowGap": 2,
        }
      }
    >
      <Text
        allowFontScaling={false}
        maxFontSizeMultiplier={1.235}
        numberOfLines={1}
        style={
          {
            "color": "#241208",
            "fontSize": 12,
            "fontWeight": "700",
          }
        }
      >
        가격 미입력
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "columnGap": 2,
            "flexDirection": "row",
            "rowGap": 2,
          }
        }
        testID="unpriced-cta"
      >
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.235}
          numberOfLines={1}
          style={
            {
              "color": "#645C42",
              "fontSize": 10.5,
              "fontWeight": "600",
            }
          }
        >
          기록하기
        </Text>
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={12}
          bbWidth={12}
          fill="none"
          focusable={false}
          height={12}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#645C42"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flexShrink": 0,
              },
              {
                "flex": 0,
                "height": 12,
                "width": 12,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={12}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4284767298,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGPath
              d="m9 18 6-6-6-6"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4284767298,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`세 크기 스냅샷 — 아무도 안 부르는 분기의 유일한 안전망 2x2 1`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    style={
      {
        "columnGap": 8,
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
        "padding": 12,
        "rowGap": 8,
      }
    }
    testID="widget-unpriced-drops"
  >
    <View
      style={
        {
          "alignItems": "center",
          "columnGap": 8,
          "flexDirection": "row",
          "rowGap": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#E4E1CE",
            "borderColor": "#CFC9AE",
            "borderRadius": 9999,
            "borderWidth": 1,
            "flexShrink": 0,
            "height": 28,
            "justifyContent": "center",
            "width": 28,
          }
        }
        testID="unpriced-badge"
      >
        <Text
          adjustsFontSizeToFit={true}
          allowFontScaling={false}
          maxFontSizeMultiplier={1.235}
          numberOfLines={1}
          style={
            {
              "color": "#241208",
              "fontSize": 13,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "800",
            }
          }
        >
          5
        </Text>
      </View>
      <Text
        allowFontScaling={false}
        maxFontSizeMultiplier={1.235}
        numberOfLines={1}
        style={
          {
            "color": "#645C42",
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
            "fontSize": 11,
            "fontWeight": "700",
          }
        }
      >
        가격 미입력
      </Text>
    </View>
    <View
      style={
        {
          "columnGap": 2,
          "rowGap": 2,
        }
      }
      testID="unpriced-preview"
    >
      <Text
        allowFontScaling={false}
        maxFontSizeMultiplier={1.235}
        numberOfLines={1}
        style={
          {
            "color": "#241208",
            "fontSize": 11,
          }
        }
        testID="unpriced-item"
      >
        생명의 연마석
      </Text>
      <Text
        allowFontScaling={false}
        maxFontSizeMultiplier={1.235}
        numberOfLines={1}
        style={
          {
            "color": "#241208",
            "fontSize": 11,
          }
        }
        testID="unpriced-item"
      >
        검은 환생의 불꽃
      </Text>
      <Text
        allowFontScaling={false}
        maxFontSizeMultiplier={1.235}
        numberOfLines={1}
        style={
          {
            "color": "#241208",
            "fontSize": 11,
          }
        }
        testID="unpriced-item"
      >
        미트라의 분노
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "columnGap": 2,
          "flexDirection": "row",
          "rowGap": 2,
        }
      }
      testID="unpriced-cta"
    >
      <Text
        allowFontScaling={false}
        maxFontSizeMultiplier={1.235}
        numberOfLines={1}
        style={
          {
            "color": "#645C42",
            "fontSize": 10.5,
            "fontWeight": "600",
          }
        }
      >
        외 2건 · 기록하기
      </Text>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={12}
        bbWidth={12}
        fill="none"
        focusable={false}
        height={12}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#645C42"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flexShrink": 0,
            },
            {
              "flex": 0,
              "height": 12,
              "width": 12,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={12}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4284767298,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="m9 18 6-6-6-6"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4284767298,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;
